# ollama-gui

./: CMakeLists.txt  Makefile  README.md  test
OllamaGui/: CMakeLists.txt
OllamaGui/include/: Api.h
OllamaGui/include/api/: Api.h  Endpoints.h  Request.h
OllamaGui/include/ui/: Chat.h  Dialog.h  MainWindow.h  SelectModel.h  SelectServer.h  test
OllamaGui/resources/: resources.qrc  stylesheet.qss
OllamaGui/resources/api/: request_model.json  response_model.json
OllamaGui/resources/styles/: main_stylesheet.qss
OllamaGui/src/: Api.cpp  main.cpp
OllamaGui/src/api/: Api.cpp  Endpoints.cpp  Request.cpp
OllamaGui/src/ui/: Chat.cpp  Dialog.cpp  MainWindow.cpp  RequestManager.cpp  SelectModel.cpp  SelectServer.cpp  chat.ui  dialog.ui  selectmodel.ui  selectserver.ui  stylesheet.qss
app/: CMakeLists.txt  OllamaGui.cpp  OllamaGui.h  main.cpp
